[package]
name = "my_chain"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.40"
sha2 = "0.10.8"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["io-util", "io-std", "macros", "rt", "rt-multi-thread", "sync", "time"] }
hex = "0.4.3"
once_cell = "1.21.1"
log = "0.4.26"
pretty_env_logger = "0.5.0"
num-bigint = "0.4.6"
num-traits = "0.2.19"
sled = "1.0.0-alpha.124"